--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -516,67 +516,74 @@ footer a {
         justify-content: space-between;
     }
     #vote .votelist {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding-top: 66px;
-    padding-bottom: 66px;
-}
- 
+        max-width: 1280px;
+        margin: 0 auto;
+        padding-top: 66px;
+        padding-bottom: 66px;
     }
-        
+    #vote p {
+        margin: 0;
+    }
+}
 
 .container {
-        margin-top: 20rem;
-
+    margin-top: 20rem;
 }
+
 #vote {
-	margin: 10px;
-	text-align: center;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/votebackground.jpg") no-repeat center center;
-	
+    margin: 10px;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/votebackground.jpg") no-repeat center center;
     margin: -10px;
-    
 }
 
 #vote h1 {
-	font-size: 30px;
-	font-weight: 700;
-	text-transform: uppercase;
+    font-size: 30px;
+    font-weight: 700;
+    text-transform: uppercase;
     margin-top: 15px;
     color: aliceblue;
 }
 
 #vote h2 {
-	margin-top: 5px;
+    margin-top: 5px;
     font-size: 20px;
     color: aliceblue;
 }
 
 #vote p {
-	margin-top: 3px;
+    margin-top: 3px;
     font-size: 18px;
     color: aliceblue;
 }
 
+#votepara {
+    padding-bottom: 20px;
+}
+
 #vote .voteblock {
-	transform: none;
+    transform: none;
     transition: all .2s ease-in;
+    padding-left: 160px;
 }
 
 .voteblock a {
     font-weight: 700;
 }
+
 #vote .votelist {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding-top: 66px;
-	padding-bottom: 66px;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-top: 66px;
+    padding-bottom: 66px;
 }
+
 .res-img-sm {
     height: 110px;
 }
+
 .row {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -586,4 +593,3 @@ footer a {
     margin-right: -15px;
     margin-left: -15px;
 }
-
