--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -162,7 +162,7 @@ h3 {
 .hero {
     height: 50vh;
     width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/background.png") no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../img/Image.png") no-repeat center center;
     background-size: cover;
     text-align: center;
     display: flex;
