Added Download-Page , Some Changes In Home-Page and Whitelist-Page

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -348,15 +348,15 @@ hr {
 }
 
 .owner {
-    background-color: rgba(244, 65, 65, .5);
+    background-color: rgba(255, 0, 0, 0.5);
 }
 
 .manager {
-    background-color: rgba(66, 134, 244, .5);
+    background-color: rgba(13, 0, 255, 0.5);
 }
 
 .admin {
-    background-color: rgba(59, 211, 42, .5);
+    background-color: rgba(26, 255, 0, 0.5);
 }
 
 
@@ -589,4 +589,8 @@ footer a {
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
+}
+
+.helping {
+    background-color: purple;
 }
